--- a/share/qtvcp/screens/qtplasmac_9x16/qtplasmac_9x16.ui
+++ b/share/qtvcp/screens/qtplasmac_9x16/qtplasmac_9x16.ui
@@ -4606,6 +4606,9 @@ HOME</string>
                             <property name="text">
                              <string>0</string>
                             </property>
+                            <property name="popupMode">
+                             <enum>QToolButton::InstantPopup</enum>
+                            </property>
                             <property name="joint_number" stdset="0">
                              <number>4</number>
                             </property>
@@ -17718,7 +17721,7 @@ CONFIG</string>
   </customwidget>
   <customwidget>
    <class>WebWidget</class>
-   <extends>QWebView</extends>
+   <extends>QWidget</extends>
    <header>qtvcp.widgets.web_widget</header>
   </customwidget>
   <customwidget>
@@ -17791,11 +17794,6 @@ CONFIG</string>
    <class>SystemToolButton</class>
    <extends>QToolButton</extends>
    <header>qtvcp.widgets.system_tool_button</header>
-  </customwidget>
-  <customwidget>
-   <class>QWebView</class>
-   <extends>QWidget</extends>
-   <header location="global">QtWebKitWidgets/QWebView</header>
   </customwidget>
  </customwidgets>
  <resources>
