qtplasmac: allow negative pierce only offsets

--- a/share/qtvcp/screens/qtplasmac/qtplasmac.ui
+++ b/share/qtvcp/screens/qtplasmac/qtplasmac.ui
@@ -11861,6 +11861,9 @@ HOME ALL</string>
                             <property name="decimals">
                              <number>1</number>
                             </property>
+                            <property name="minimum">
+                             <double>-5.000000000000000</double>
+                            </property>
                             <property name="maximum">
                              <double>5.000000000000000</double>
                             </property>
@@ -11928,6 +11931,9 @@ HOME ALL</string>
                             </property>
                             <property name="decimals">
                              <number>1</number>
+                            </property>
+                            <property name="minimum">
+                             <double>-5.000000000000000</double>
                             </property>
                             <property name="maximum">
                              <double>5.000000000000000</double>
