--- a/share/qtvcp/screens/qtplasmac_9x16/qtplasmac_9x16.ui
+++ b/share/qtvcp/screens/qtplasmac_9x16/qtplasmac_9x16.ui
@@ -13481,6 +13481,9 @@ MOVE</string>
                                <property name="decimals">
                                 <number>1</number>
                                </property>
+                               <property name="minimum">
+                                <double>-5.000000000000000</double>
+                               </property>
                                <property name="maximum">
                                 <double>5.000000000000000</double>
                                </property>
@@ -13548,6 +13551,9 @@ MOVE</string>
                                </property>
                                <property name="decimals">
                                 <number>1</number>
+                               </property>
+                               <property name="minimum">
+                                <double>-5.000000000000000</double>
                                </property>
                                <property name="maximum">
                                 <double>5.000000000000000</double>
