--- a/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
+++ b/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
@@ -11916,6 +11916,9 @@ MOVE</string>
                             <property name="decimals">
                              <number>1</number>
                             </property>
+                            <property name="minimum">
+                             <double>-5.000000000000000</double>
+                            </property>
                             <property name="maximum">
                              <double>5.000000000000000</double>
                             </property>
@@ -11983,6 +11986,9 @@ MOVE</string>
                             </property>
                             <property name="decimals">
                              <number>1</number>
+                            </property>
+                            <property name="minimum">
+                             <double>-5.000000000000000</double>
                             </property>
                             <property name="maximum">
                              <double>5.000000000000000</double>
