--- a/share/qtvcp/screens/qtdragon_hd/brushed_metal_color.qss
+++ b/share/qtvcp/screens/qtdragon_hd/brushed_metal_color.qss
@@ -22,6 +22,7 @@ background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 
 
 
 QPushButton:checked,
+QToolButton:checked,
 QPushButton:pressed {
     border-color: blue;
     color: #0000FF;
