--- a/docs/src/index.tmpl
+++ b/docs/src/index.tmpl
@@ -129,7 +129,8 @@ function setup_page(){
 <div id="sec0">
 	<ul>
 		<li><a href="getting-started/about-linuxcnc.html">About LinuxCNC</a></li>
-		<li><a href="getting-started/system-requirements.html">System Requirements</a></li>
+		<li><a href="getting-started/system-requirements.html">Computer System Requirements</a></li>
+		<li><a href="getting-started/hardware-interface.html">Hardware Interface / Supported Hardware</a></li >
 		<li><a href="getting-started/getting-linuxcnc.html">Getting LinuxCNC</a></li>
 		<li><a href="getting-started/running-linuxcnc.html">Running LinuxCNC</a></li>
 		<li><a href="getting-started/updating-linuxcnc.html">Updating LinuxCNC</a></li>
